# rofi-nix

./: .gitignore  Makefile.am  README.md  configure.ac  flake.nix
src/: nix.c  nix.h  rofi-nix.c
